Adicionando validação na disponibilidade do médico.